# automated_blog

./: .env.example  .gitignore  FOUNDATION.md  Improvements.md  README.md  pyproject.toml
daily_ai_timeline/: __init__.py  __main__.py  cli.py  config.py  dedupe.py  generator.py  ingest.py  prompt.py  server.py  utils.py
niches/: ai_jobs_au.yaml  ai_news.yaml
out-daily/: archive.html  index.html  sources.json  today.md
out-daily/archive/: 2026-01-12.html  2026-01-12.json
out-jobs-au/: archive.html  index.html  sources.json  today.md
out-jobs-au/archive/: 2026-01-12.html
out-weekly/: archive.html  index.html  today.md
out-weekly/archive/: 2026-01-12.html  2026-01-12.json
tests/: __init__.py  test_dedupe.py  test_prompt.py  test_scoring.py  test_utils.py
